<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, JoyActivity!</string>
    <string name="app_name">Joy</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新中...</string>
    
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多...</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中...</string>
    <string name="shaohou">请稍候</string>
    <string name="tishi">提示</string>
    <string name="shifoutuichu">是否退出程序</string>
    <string name="queding">确定</string>
    <string name="quxiao">取消</string>
    <string name="yue">悦视频</string>
    <string name="denglu">登  录</string>
    <string name="zhuce">注册</string>
    <string name="dianying">电影</string>
    <string name="shipin">视频</string>
    <string name="juji">剧集</string>
    <string name="zongyi">综艺</string>
    <string name="zhengzailiuxing">正在流行</string>
    <string name="haoyoutuijian">好友推荐</string>
    <string name="dongtaitixing">动态提醒</string>
    <string name="gerenzhuye">个人主页</string>
    <string name="xihuan">喜欢</string>
    <string name="guanzhu">关注</string>
    <string name="fensi">粉丝</string>
    <string name="kanguodeyingpian">看过的影片</string>
    <string name="shoucangdeyingpian">收藏的影片</string>
    <string name="tuijiandeyingpian">推荐的影片</string>
    <string name="shezhi">设置</string>
    <string name="xunzhaohaoyou">寻找好友</string>
    <string name="sousuo">搜索</string>
    <string name="sousuojieguo">搜索结果</string>
    <string name="back">返回</string>
    <string name="send">提交</string>
    <string name="darentuijian">达人推荐</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="goback">返回</string>
    <string name="canloginstr">您可以用以下账号登陆</string>
    <string name="QQ_str">QQ账号</string>
    <string name="Sina_str">微博账号</string>
    <string name="goin">登陆</string>
    <string name="loginemail">邮箱/昵称</string>
    <string name="password">密码</string>
    <string name="loginError">请正确输入账号和密码</string>
    <string name="person_imformation">补充个人资料</string>
    <string name="imformation">激活悦+账号</string>
    <string name="imformation_name">昵称</string>
    <string name="imformation_email">邮箱</string>
    <string name="imformation_password">密码</string>
    <string name="sinafirend">新浪微博好友</string>
    <string name="tengxunfirend">腾讯微博好友</string>
    <string name="tongxunlufirend">查找通讯录好友</string>
    <string name="dianhuahaoma">电话号码</string>
    <string name="shoujihaoma">请输入您的手机号码:</string>
    <string name="xiangxiziliao">详细资料</string>
    
    <string name="zhanghaodenglu">帐号登录</string>
    <string name="haoyouliebiao">好友列表</string>
    <string name="yaoqinghaoyou">邀请好友</string>
    <string name="yiguanzhu">已关注的</string>
    <string name="duanxinyaoqing">短信邀请</string>
    <string name="yaoqing_text">还未加入joy+，您可以：</string>
    <string name="name">姓名：</string>
    <string name="phone">手机：</string>
    <string name="yaoqing">邀请</string>
    <string name="jiaguanzhu">+关注</string>
    <string name="duanxinneirong">测试短信内容</string>
    <string name="detail">详情</string>
    <string name="drama">剧集列表</string>
    <string name="usercomment">用户评论</string>
    <string name="xiayibu">下一步</string>
    <string name="guanzhuall">全部关注</string>
    <string name="gerenzhanghao">个人帐号</string>
    <string name="zhuxiao">注销：</string>
    <string name="chazhaotianjia">查找/添加好友</string>
    <string name="qitashezhi">其他设置</string>
    <string name="yijianfankui">意见反馈</string>
    <string name="guanyuwomen">关于我们</string>
    <string name="yingpianmingzi">影片名字</string>
    <string name="sousuojilu">搜索记录</string>
    <string name="remensousuo">热门搜索</string>
    <string name="youguandeyingpian">有关的影片</string>
    <string name="youguandeshipin">有关的视频</string>
    <string name="doubanpingfen">豆瓣评分：</string>
    <string name="shichang">时长：</string>
    <string name="pingfen">评分：</string>
    <string name="xiaoxi">消息</string>
    <string name="myxiaoxi">我的消息</string>
    <string name="wait">请稍候...</string>
    <string name="sinawb">SINA</string>
    <string name="tencent">QQ</string>
    <string name="pleaseenter">请输入</string>
    <string name="canenter">还可以输入</string>
    <string name="word">字</string>
    <string name="all_reply">全部回复</string>
    <string name="please_login">请登录！</string>
    <string name="fenxiang">分享</string>
    <string name="pinglun">评论</string>
    <string name="tongbudao">同步到:</string>
    <string name="send_failed">发送失败！</string>
    <string name="send_sucess">发送成功！</string>
     <string name="tuijian">推荐</string>
      <string name="kanguo">看过</string>
       <string name="shoucang">收藏</string>
       <string name="youcanenterwords">还可以输入120字</string>
       <string name="error">资料填写错误：</string>
       <string name="imformation_nameerror">昵称格式（不小于1位,并且不能包含特殊字符）</string>
       <string name="emailerror">邮箱格式</string>
       <string name="passworderror">密码不小于6位</string>
       <string name="reply">回复</string>
       <string name="zhuxiaochenggong">注销成功</string>
       <string name="go_detail">welcome</string>
       <string name="go_detail_notwelcome">notwelcome</string>
       <string name="error_file">未能找到指定文件</string>
       <string name="nologin">您尚未登录是否进行登录并进行回复</string>
       <string name="nopic">Demo版：图片不存在，请于sd卡中创建一张abc.jpg图片</string>
       <string name="photostyle">选择照片类型</string>
       <string name="exit_true">true</string>
       <string name="exit_false">false</string>
       <string name="finish">完成</string>
       <string name="Joyce">Joyce</string>
       <string name="jianjie">简介</string>
       <string name="dou">豆</string>
       <string name="move_name">冰川时代</string>
       <string name="fenshu">3601</string>
       <string name="SINA_CONSUMER_KEY">3069972161</string>
       <string name="SINA_CONSUMER_SECRET">eea5ede316c6a283c6bae57e52c9a877</string>
       <string name="mAppid">222222</string>
       <string name="CALLBACK">auth://tauth.qq.com/</string>
       <string name="scope">get_user_info,get_user_profile,add_share,add_topic,list_album,upload_pic,add_album</string>
       <string name="delete">删除</string>
       <string name="huifu">回复</string>
       <string name="pleasewait">请稍候</string>
       <string name="loading">加载中</string>
       <string name="weizhaodao">未能找到您搜索的结果</string>
       <string name="woguanzhu">我关注的人</string>
        <string name="cancelguanzhu">取消关注</string>
         <string name="yiguanzhu1">已关注</string>
         <string name="qingqiu">请求中,请稍等...</string>
         <string name="shouquanfalse">授权失败</string>
        <string name="shouquansuess">授权成功</string>
        <string name="replysuess">回复成功</string>
        <string name="pleaseenterwords">pleaseenterwords</string>
        <string name="jiazai">加载完成</string>
        <string name="shuaxin">刷新完成</string>
         
         
       <!-- <友盟 -->
</resources>