<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" 
        android:background="#1A1A1A">
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
    android:layout_alignParentTop="true"
    android:id="@+id/shezhi_lin"
    android:background="@drawable/title"
    >
<TextView
     android:layout_width="wrap_content" 
     android:layout_height="wrap_content" 
     android:text="@string/shezhi"
     android:layout_centerInParent="true"
     android:textSize="20sp"		
	android:textColor="@color/white" /> 
 
<RelativeLayout 
    android:layout_alignParentLeft="true"
    android:layout_marginLeft="10dp"
    android:layout_width="64dp"
    android:layout_height="wrap_content"
    android:onClick="Btn_back"
    android:layout_centerVertical="true"
    android:background="@drawable/btn_top_left"
    >
 <TextView
     android:layout_width="wrap_content" 
     android:layout_height="wrap_content" 
     android:text="@string/back"
     android:layout_alignParentRight="true"
     android:layout_marginRight="12dp"
     android:textSize="15sp"		
     android:layout_centerVertical="true"
	android:textColor="@color/white" />   
</RelativeLayout>
</RelativeLayout>

<TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="15sp"
    android:textColor="@color/white"
    android:layout_marginTop="14dp"
    android:layout_marginLeft="10dp"
    android:text="@string/gerenzhanghao"
    />
<RelativeLayout      				    
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:clickable="true"
            android:onClick="Btn_zhuxiao"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/preference_single_item" >
            <TextView
        		android:layout_width="wrap_content" 
        		android:layout_height="wrap_content"
        		android:layout_centerHorizontal="true"
        		android:layout_centerVertical="true"
        		android:padding="8dp" 
        		android:text="@string/zhuxiao"
        		android:textSize="17sp"		
				android:textColor="@color/black" /> 
   		</RelativeLayout>
   		
<RelativeLayout      				    
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:gravity="center_vertical"
            android:clickable="true"
            android:onClick="Btn_chazhao"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/preference_single_item" >
            <TextView
        		android:layout_width="wrap_content" 
        		android:layout_height="wrap_content"
        		android:layout_centerHorizontal="true"
        		android:layout_centerVertical="true"
        		android:padding="8dp" 
        		android:text="@string/chazhaotianjia"
        		android:textSize="17sp"		
				android:textColor="@color/black" /> 
   		</RelativeLayout>
   		
<TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="15sp"
    android:textColor="@color/white"
    android:layout_marginTop="14dp"
    android:layout_marginLeft="10dp"
    android:text="@string/qitashezhi"
    /> 

<RelativeLayout      				    
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:gravity="center_vertical"
            android:clickable="true"
            android:onClick="Btn_yijianfankui"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/preference_single_item" >
            <TextView
        		android:layout_width="wrap_content" 
        		android:layout_height="wrap_content"
        		android:layout_centerHorizontal="true"
        		android:layout_centerVertical="true"
        		android:padding="8dp" 
        		android:text="@string/yijianfankui"
        		android:textSize="17sp"		
				android:textColor="@color/black" /> 
   		</RelativeLayout>

<RelativeLayout      				    
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:gravity="center_vertical"
            android:clickable="true"
            android:onClick="Btn_guanyuwomen"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/preference_single_item" >
            <TextView
        		android:layout_width="wrap_content" 
        		android:layout_height="wrap_content"
        		android:layout_centerHorizontal="true"
        		android:layout_centerVertical="true"
        		android:padding="8dp" 
        		android:text="@string/guanyuwomen"
        		android:textSize="17sp"		
				android:textColor="@color/black" /> 
   		</RelativeLayout>
</LinearLayout>