<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="#1A1A1A" >
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
    android:layout_alignParentTop="true"
    android:id="@+id/tongxunlu_lin"
    android:background="@drawable/title"
    >
<TextView
     android:layout_width="wrap_content" 
     android:layout_height="wrap_content" 
     android:text="@string/tongxunlufirend"
     android:layout_centerInParent="true"
     android:textSize="20sp"		
	android:textColor="@color/white" /> 
<RelativeLayout 
    android:layout_alignParentLeft="true"
    android:layout_marginLeft="10dp"
    android:layout_width="64dp"
    android:layout_height="wrap_content"
    android:onClick="Btnback"
    android:layout_centerVertical="true"
    android:background="@drawable/btn_top_left"
    >
 <TextView
     android:layout_width="wrap_content" 
     android:layout_height="wrap_content" 
     android:text="@string/back"
     android:layout_alignParentRight="true"
     android:layout_marginRight="12dp"
     android:textSize="15sp"		
     android:layout_centerVertical="true"
	android:textColor="@color/white" />   
</RelativeLayout>
</RelativeLayout>

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="45dp"
    android:orientation="horizontal" 
    android:background="#4A4A4A"
    android:gravity="center_vertical"
    >
<AutoCompleteTextView
     android:layout_width="wrap_content" 
     android:layout_height="wrap_content" 
     android:hint="@string/dianhuahaoma"
     android:id="@+id/tongxunlu_sousuo"
     android:layout_centerVertical="true"
     android:layout_weight="1"
     android:background="@drawable/editbg"
     android:textColor="@color/white"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
     android:singleLine="true"
     /> 
<Button
    android:layout_marginLeft="5dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/sousuo"
    android:onClick="Btnsousuo"
    android:textColor="@color/white"
    android:layout_centerVertical="true"
    android:background="@drawable/btn_sousuo"
    />
</LinearLayout>

<TextView 
    android:layout_width="wrap_content" 
     android:layout_height="wrap_content" 
     android:hint="@string/shoujihaoma"
     android:textColor="@color/white"
     android:textSize="16sp"
     android:layout_marginLeft="15dp"
    />
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="45dp"
    android:orientation="horizontal" 
    android:background="#4A4A4A"
    android:gravity="center_vertical"
    >
<EditText
    android:layout_width="wrap_content" 
     android:layout_height="wrap_content" 
     android:hint="@string/dianhuahaoma"
     android:id="@+id/tongxunlu_phone"
     android:layout_centerVertical="true"
     android:layout_weight="1"
     android:background="@drawable/editbg"
     android:textColor="@color/white"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
     android:singleLine="true"
     /> 
<Button
    android:layout_marginLeft="5dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/send"
    android:onClick="BtnSend"
    android:textColor="@color/white"
    android:layout_centerVertical="true"
    android:background="@drawable/btn_sousuo"
    />
</LinearLayout>
<RelativeLayout 
    android:layout_width="fill_parent" 
     android:layout_height="wrap_content" 
     android:background="@color/black"
    >
    
<TextView 
     android:layout_width="wrap_content" 
     android:layout_height="wrap_content" 
     android:hint="@string/haoyouliebiao"
     android:textColor="@color/white"
     android:textSize="12sp"
     android:layout_marginLeft="15dp"
    />
</RelativeLayout>
<com.joy.view.PullToRefreshView_foot
    android:id="@+id/tongxunlu_main_pull_refresh_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical"
    >
<ListView 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" 
    android:id="@+id/tongxunlu_list"
    android:cacheColorHint="#00000000"
    android:divider="#313132"
    android:fadingEdge="none"
    android:dividerHeight="1px"
    >
</ListView>
</com.joy.view.PullToRefreshView_foot>
</LinearLayout>