<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="#1A1A1A"
    >
<RelativeLayout
    android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:id="@+id/title" 
  	android:background="@drawable/title"
    >
<TextView
     android:layout_width="wrap_content" 
     android:layout_height="wrap_content" 
     android:text="@string/gerenzhuye"
     android:layout_centerInParent="true"
     android:textSize="20sp"		
	android:textColor="@color/white" /> 
<Button 
	 android:id="@+id/act04_shezhi"
	 android:layout_width="65dp" 
     android:layout_height="wrap_content"
     android:layout_alignParentRight="true"
     android:layout_marginRight="10dp"
     android:text="@string/shezhi"
     android:onClick="Btn_shezhi"
     android:layout_centerVertical="true"
     android:background="@drawable/btn_top_right"
     android:textColor="@color/white"
     android:textSize="15sp"
	/> 
</RelativeLayout>
   
<com.joy.view.PullToRefreshView_foot
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:id="@+id/act04_main_pull_refresh_view"
    android:orientation="vertical"
     android:layout_below="@id/title"
    >
<ScrollView
    android:id="@+id/act04_sco"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:fadingEdge="none"
    android:scrollbars="none">
<RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >


<ImageView 
   
    android:id="@+id/act04_beijing"
    android:layout_width="fill_parent"
    android:layout_height="150dp"
    android:background="@drawable/zhuyebg"
    android:scaleType="centerInside"
    />

<RelativeLayout
    android:layout_below="@id/act04_beijing"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:layout_marginTop="20dp"
    android:id="@+id/act04_rel"
    android:layout_gravity="center"
    >
<LinearLayout 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_alignParentRight="true"
    >
<LinearLayout 
    android:id="@+id/act04_guanzhu"
    android:layout_width="80dp"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
<TextView
     android:layout_width="wrap_content" 
     android:layout_height="wrap_content"
     android:text="9969"
     android:textColor="@color/black"
     android:layout_gravity="center_horizontal|center_vertical"
     android:background="@color/grey"
    />
<Button
     android:layout_width="wrap_content" 
     android:layout_height="wrap_content"
     android:text="@string/guanzhu"
     android:textColor="@color/white"
     android:background="@color/black"
    />
</LinearLayout>
<LinearLayout 
    android:id="@+id/act04_fensi"
    android:layout_width="80dp"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
<TextView
     android:layout_width="wrap_content" 
     android:layout_height="wrap_content"
     android:text="1275"
     android:textColor="@color/black"
     android:layout_gravity="center_horizontal|center_vertical"
     android:background="@color/grey"
    />
<Button
     android:layout_width="wrap_content" 
     android:layout_height="wrap_content"
     android:text="@string/fensi"
     android:textColor="@color/white"
     android:background="@color/black"
     android:clickable="false"
    />
</LinearLayout>
</LinearLayout>   
</RelativeLayout>
<LinearLayout
    android:layout_below="@id/act04_rel"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
    android:gravity="center"
    android:layout_marginTop="17dp"
    android:id="@+id/act04_linear"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    >
<Button
    android:id="@+id/act04_kanguodeyingpian"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/kanguodeyingpian"
    android:background="@drawable/btn_topleft"
    android:textColor="@color/white"
    android:layout_weight="1"
    />
<Button
    android:id="@+id/act04_shoucangdeyingpian"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/shoucangdeyingpian"
    android:textColor="@color/white"
    android:background="@drawable/btn_topbar"
    android:layout_weight="1"
    />
<Button
    android:id="@+id/act04_tuijiandeyingpian"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/tuijiandeyingpian"
    android:textColor="@color/white"
    android:background="@drawable/btn_topright"
    android:layout_weight="1"
    />
</LinearLayout>

<LinearLayout
    android:layout_below="@id/act04_linear"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical"
    android:layout_weight="1" 
    android:id="@+id/act04_linearlayout1"/>
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_weight="1" 
    android:id="@+id/act04_linearlayout2"/>
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical"
    android:layout_weight="1" 
    android:id="@+id/act04_linearlayout3"/>
</LinearLayout>
<ImageView
    android:id="@+id/act04_hand"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/head"
    android:layout_marginTop="130dp"
    android:layout_marginLeft="10dp"
    />
<TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_toRightOf="@id/act04_hand"
    android:text="Joyce"
    android:textColor="@color/white"
    android:textSize="25sp"
    android:layout_marginTop="130dp"
    android:layout_marginLeft="20dp"
    />
</RelativeLayout>
</ScrollView>
</com.joy.view.PullToRefreshView_foot>
</RelativeLayout>
